Changed the display title of the project

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<header class="head">
 			<div class="title">
 				<img src="img/devlogo.png" alt="" class="logo">
-        <h1>Dheet Developers</h1>
+        <h1>White Board</h1>
       </div>
 
       <div class="tools">
